# lektorium

./: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  CONFIG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  LICENSE  README.md  config.yml  foo.lektorproject  legit.py  legit_test.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  tasks.py  work_with_git.py
.circleci/: config.yml
.github/workflows/: pythonapp.yml
app/static/js/: app.79494bfe.js  (+1 more)
backend/: app.py  requirements.txt  routes.py  settings.py
backend/auth/: models.py  views.py
backend/frontend/: README.md  package-lock.json  package.json
certs/: traefik-config.yml
client/: README.md  index.html  package.json  vue.config.js
client/public/: index.html
client/src/: App.vue  main.js  router.js
config/: config.py  tests.py
config/sites/: example.com.yaml
container/: Dockerfile  entrypoint.sh
containers/lectern/: Dockerfile  entrypoint.sh
containers/lektor/: Dockerfile
containers/nginx-proxy/: Dockerfile
containers/proxy/: nginx.conf
containers/server/: Dockerfile  Dockerfile.alpine  Dockerfile.ubuntu  entrypoint.sh
docker_app/: Dockerfile  main.py  readme.md  requirements.txt
server/: app.py
src/lektorium/: __main__.py  app.py  auth0.py  aws.py  gitlab.py  install.py  jwt.py  proxy.py  repo.py  schema.py  utils.py
test/: test_legit.py
tests/: conftest.py  test_app.py  test_auth0_client.py  test_aws.py  test_docker_interface.py  test_gitlab.py  test_gitlab_real.py  test_gitlab_storage.py  test_graphql.py  test_grqphql.py  test_jwt.py  test_local.py  test_permissions.py  test_repo.py  test_repo_legit.py  test_server.py  test_storage.py
tests_docker/: test_docker_client.py
(+57 files in other folders)
